assets/css/nav/_top_nav.scss
.m-top-nav {
  width: 100%;
  height: 3rem;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.75rem 1.5rem;

  background-color: $color-gray-50;

  border-bottom: 1px solid $color-gray-300;
}

.m-top-nav__logo {
  width: 2.5rem;
  height: 1.5rem;
}

.m-top-nav__logo-icon {
  svg {
    fill: $color-eggplant-900;
  }
}

.m-top-nav__right-items {
  display: flex;

  :not(:last-child) {
    padding-right: 1.5rem;
  }
}

.m-top-nav__right-item {
  @include button-icon(1.5rem);
  color: $color-gray-600;

  & span svg {
    stroke: none;
  }

  &:hover {
    color: $color-gray-500;
  }

  &.m-top-nav__right-item--active {
    color: $color-eggplant-800;
  }
}

.m-top-nav__notifications-icon {
  svg {
    path {
      fill: $color-gray-600;
      stroke: none;
    }

    circle {
      fill: $color-strawberry-500;
      stroke: $color-strawberry-500;
    }
  }

  &:hover {
    svg {
      path {
        fill: $color-gray-500;
        stroke: none;
      }

      circle {
        fill: $color-strawberry-400;
        stroke: $color-strawberry-400;
      }
    }
  }

  &.m-top-nav__notifications-icon--active {
    svg {
      path {
        fill: $color-eggplant-800;
        stroke: none;
      }

      circle {
        fill: $color-strawberry-500;
        stroke: $color-strawberry-500;
      }
    }
  }
}

